# cmake_embedded_project_template

./: .gitmodules  CMakeLists.txt  README.md
cmake/arm-none-eabi/: cortex_m0.cmake  cortex_m0_plus.cmake  cortex_m3.cmake  cortex_m4.cmake  cortex_m7.cmake  toolchain.cmake
cmake/armcc/: cortex_m0.cmake  cortex_m0_plus.cmake  cortex_m3.cmake  cortex_m4.cmake  cortex_m7.cmake  toolchain.cmake
test/armcc_test/: CMakeLists.txt
test/armcc_test/src/: main.c
test/gcc_test/: CMakeLists.txt
test/gcc_test/CubeMx_Config/: .mxproject
test/gcc_test/CubeMx_Config/Inc/: ffconf.h  main.h
test/gcc_test/CubeMx_Config/Src/: bsp_driver_sd.c  fatfs.c  main.c
test/gcc_test/source/: app.c  mem.c
test/h7_demo/: CMakeLists.txt
test/h7_demo/CubeMx_Config/: CubeMx_Config.ioc  Makefile  STM32H750VBTx_FLASH.ld
test/h7_demo/CubeMx_Config/Inc/: FreeRTOSConfig.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h
test/h7_demo/CubeMx_Config/Src/: freertos.c  sd_diskio.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c
test/h7_demo/source/: app.h  drv.c
test/h7_demo/startup/: STM32H750VB_QSPI_FLASH.ld  startup_stm32h750xx.s
